added more information on tutorial

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Arcana by HTML5 UP</title>
+		<title>Linked Data Tutorial at ISWC 2019</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -18,16 +18,16 @@
 				<div id="header">
 
 					<!-- Logo -->
-						<h2>Linked Data: Querying, Reasoning, and Benchmarking</h2>
-						<h1><a href="https://iswc2019.semanticweb.org/" target="_blank">ISWC 2019 Tutorial</a></h1>
+						<h2>Tutorial on Linked Data: Querying, Reasoning, and Benchmarking</h2>
+						<h3><a href="https://iswc2019.semanticweb.org/" target="_blank">18th International Semantic Web Conference (ISWC 2019)</a></h3>
+						<h3>October 26-27, 2019. The University of Auckland, New Zealand</h3>
 
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
 								<li class="current"><a href="#overview">Overview</a></li>
 								<li><a href="#schedule">Schedule</a></li>
-								<li><a href="#organizers">Organizers</a></li>
-								<li><a href="#contactus">Contact Us</a></li>
+								<li><a href="#organizers">Presenters</a></li>
 							</ul>
 						</nav>
 
@@ -42,6 +42,14 @@
 						<p style="text-align:justify">
 						Linked Data allows meaningful links to be created between pieces of data on the Web. Adoption of Linked Data technologies has shifted the Web from a space of connecting documents to a global space where pieces of data from different domains are semantically linked and integrated to create a globalWeb of Data. While small amounts of Linked Data can be handled in-memory or by standard relational database systems, big Linked Data graphs, which we nowadays have to deal with, are very hard to manage. Modern Linked Data management systems have to face large amounts of heterogeneous, inconsistent, and schema-free data. The aim of this tutorial is to provide a comprehensive overview of the state-of-the-art in linked data storage techniques, static/streaming query processing mechanisms, scalable reasoning approaches, and benchmarking.
 						</p>
+						
+						<p style="text-align:justify">
+						The material of this tutorial is based on the book <a href="https://www.springer.com/gp/book/9783319735146" target="_blank">"Linked Data: Storing, Querying, and Reasoning"</a> 
+						</p>
+ 
+						<p style="text-align:center">
+						<img src="images/Book-LinkedData.png" alt="Linked Data: Storing, Querying, and Reasoning" WIDTH=240 HEIGHT=360/> 
+						</p>
 					</div>
 				</section>
 
@@ -49,21 +57,21 @@
 				<section id="schedule" class="wrapper style1">
 					<div class="container">
 						<header class="major">
-							<h2>Schedule</h2>
+							<h2>Tutorial Schedule</h2>
 						</header>
-						<ol style="font-size:28px">
-							<li>Introduction (9:00-9:10)</li>
-							<li>Centralized RDF Query Processing (9:10-10:10)</li>
-							<li>Distributed RDF Query Processing Part I (10:10-10:30)</li>
-							<li>Coffee break (10:30-11:00)</li>
-							<li>Distributed RDF Query Processing Part II (11:00-11:30)</li>
-							<li>Streaming RDF Query Engines (11:30-12:30)</li>
-							<li>Lunch break (12:30-13:30)</li>
-							<li>Scalable RDF Reasoning (13:30-14:30)</li>
-							<li>Benchmarking RDF Engines Part I (14:30-15:00)</li>
-							<li>Coffee break (15:00-15:30)</li>
-							<li>Benchmarking RDF Engines Part II (15:30-16:30)</li>
-							<li>Open Challenges (16:30-17:00)</li>
+						<ol style="font-size:28px" style="line-height:2.4">
+							<li><b>Introduction</b> (9:00-9:10)</li><br/>
+							<li><b>Centralized RDF Query Processing</b> (9:10-10:10)</li><br/>
+							<li><b>Distributed RDF Query Processing (Part I)</b> (10:10-10:30)</li><br/>
+							<li><b>Coffee break</b> (10:30-11:00)</li><br/>
+							<li><b>Distributed RDF Query Processing (Part II)</b> (11:00-11:30)</li><br/>
+							<li><b>Streaming RDF Query Engines</b> (11:30-12:30)</li><br/>
+							<li><b>Lunch break</b> (12:30-13:30)</li><br/>
+							<li><b>Scalable RDF Reasoning</b> (13:30-14:30)</li><br/>
+							<li><b>Benchmarking RDF Engines (Part I)</b> (14:30-15:00)</li><br/>
+							<li><b>Coffee break</b> (15:00-15:30)</li><br/>
+							<li><b>Benchmarking RDF Engines (Part II)</b> (15:30-16:30)</li><br/>
+							<li><b>Open Challenges</b> (16:30-17:00)</li><br/>
 						</ol>
 					</div>
 				</section>
@@ -72,24 +80,24 @@
 				<section id="organizers" class="wrapper style1">
 					<div class="container">
 						<header class="major">
-							<h2>Organizers</h2>
+							<h2>Presenters</h2>
 						</header>
 						<div class="row">
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic01.jpg" alt="" /></a>
+									<a href="http://kodu.ut.ee/~sakr/" class="image left" target="_blank"><img src="images/pic01.jpg" alt="" /></a>
 									<div class="inner">
 										<h3><a href="http://kodu.ut.ee/~sakr/" target="_blank">Sherif Sakr</a></h3>
-										<p style="text-align:justify">Sherif Sakr is the Head of <a href="http://bigdata.cs.ut.ee/" target="_blank">Data Systems Group</a> at the Institute of Computer Science , University of Tartu. He received his PhD degree in Computer and Information Science from Konstanz University, Germany in 2007. Sherif is an ACM Senior Member and an IEEE Senior Member. In 2017, he has been appointed to serve as an ACM Distinguished Speaker and as an IEEE Distinguished Speaker. He is currently serving as the Editor-in-Chief of the Springer Encyclopedia of Big Data Technologies.</p>
+										<p style="text-align:justify">Sherif Sakr is the Head of <a href="http://bigdata.cs.ut.ee/" target="_blank">Data Systems Group</a> at the Institute of Computer Science, <a href="https://www.ut.ee/en" target="_blank">University of Tartu</a>, Estonia. He received his PhD degree in Computer and Information Science from Konstanz University, Germany in 2007. Sherif is an ACM Senior Member and an IEEE Senior Member. In 2017, he has been appointed to serve as an ACM Distinguished Speaker and as an IEEE Distinguished Speaker. He is currently serving as the Editor-in-Chief of the <a href="https://www.springer.com/gp/book/9783319775241">Springer Encyclopedia of Big Data Technologies</a>. He can be contacted at <a href="mailto:sherif.sakr@ut.ee">sherif.sakr@ut.ee</a>.</p>
 									</div>
 								</div>
 							</section>
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="http://raghavam.github.io/" class="image left" target="_blank"><img src="images/pic02.jpg" alt="" /></a>
 									<div class="inner">
 										<h3><a href="http://raghavam.github.io/" target="_blank">Raghava Mutharaju</a></h3>
-										<p style="text-align:justify">Raghava Mutharaju is an Assistant Professor in the Computer Science and Engineering department of the Indraprastha Institute of Information Technology, Delhi (<a href="http://www.iiitd.ac.in/" target="_blank">IIIT-D</a>), India. He got his PhD in Computer Science and Engineering from Wright State University, Dayton, OH, USA, in 2016 working under the supervision of Prof. Pascal Hitzler. He has worked in Industry research labs such as GE Research, IBM Research, Bell Labs, and Xerox Research. His research interests are in Semantic Web and Big Data. He co-organized workshops at WWW 2019, WebSci 2017, ISWC 2015 and tutorials at IJCAI 2016, AAAI 2015 and ISWC 2014.</p>
+										<p style="text-align:justify">Raghava Mutharaju is an Assistant Professor in the Computer Science and Engineering department of the <a href="http://www.iiitd.ac.in/" target="_blank">Indraprastha Institute of Information Technology, Delhi (IIIT-D)</a>, India. He got his PhD in Computer Science and Engineering from Wright State University, Dayton, OH, USA, in 2016 working under the supervision of Prof. Pascal Hitzler. He has worked in Industry research labs such as GE Research, IBM Research, Bell Labs, and Xerox Research. His research interests are in Semantic Web and Big Data. He co-organized workshops at WWW 2019, WebSci 2017, ISWC 2015 and tutorials at IJCAI 2016, AAAI 2015 and ISWC 2014. He can be contacted at <a href="mailto:raghava.mutharaju@iiitd.ac.in">raghava.mutharaju@iiitd.ac.in</a>.</p>
 									</div>
 								</div>
 							</section>
@@ -97,53 +105,25 @@
 						<div class="row">
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="http://www.danhlephuoc.info" class="image left" target="_blank"><img src="images/pic03.jpg" alt="" /></a>
 									<div class="inner">
 										<h3><a href="http://www.danhlephuoc.info" target="_blank">Danh Le Phuoc</a></h3>
-										<p style="text-align:justify">Danh Le Phuoc is a Marie Sklodowska-Curie Fellow at the Technical University of Berlin. He received his PhD in Computer Science from the National University of Ireland. He is working on Pervasive Analytics which includes Linked Data/Semantic Web, Pervasive Computing, Future Internet, and Big Data for Internet of Everything. He gave tutorials on Linked Stream Data Processing at the Reasoning Web Summer School 2012 and Tutorial Sessions at WWW 2013. He co-organised Stream Reasoning workshops  and RDF Stream Processing workshops. He is a regular PC member of ISWC, ESWC and WWW conferences.</p>
+										<p style="text-align:justify">Danh Le Phuoc is a Marie Sklodowska-Curie Fellow at the <a href="https://www.tu-berlin.de/menue/home/parameter/en/" target="_blank">Technical University of Berlin</a>, Germany. He received his PhD in Computer Science from the National University of Ireland. He is working on Pervasive Analytics which includes Linked Data/Semantic Web, Pervasive Computing, Future Internet, and Big Data for Internet of Everything. He gave tutorials on Linked Stream Data Processing at the Reasoning Web Summer School 2012 and Tutorial Sessions at WWW 2013. He co-organised Stream Reasoning workshops  and RDF Stream Processing workshops. He is a regular PC member of ISWC, ESWC and WWW conferences. He can be contacted at <a href="mailto:danh.lephuoc@tu-berlin.de">danh.lephuoc@tu-berlin.de</a>.</p>
 									</div>
 								</div>
 							</section>
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic04.jpg" alt="" /></a>
+									<a href="https://www.ics.forth.gr/isl/index_main.php?l=e&c=542" class="image left" target="_blank"><img src="images/pic04.jpg" alt="" /></a>
 									<div class="inner">
 										<h3><a href="https://www.ics.forth.gr/isl/index_main.php?l=e&c=542" target="_blank">Irini Fundulaki</a></h3>
-										<p>Irini Fundulaki is a Principal Researcher at the Institute of Computer Science of the Foundation for Research and Technology-Hellas. She received her PhD in Computer Science from the Conservatoire National des Arts et Metiers, Paris, France in 2003. Irini's research interests are related to Web Data Management and more specifically the development of benchmarks for RDF engines, instance matching and link discovery systems, the management of provenance for Linked Data, access control for RDF datasets, bias in online information providers and data integration. She has authored a large number of articles and journals and has served as chair of 3 international workshops.</p>
+										<p style="text-align:justify">Irini Fundulaki is a Principal Researcher at the Institute of Computer Science of the <a href="https://www.forth.gr/" target="_blank">Foundation for Research and Technology-Hellas</a>, Greece. She received her PhD in Computer Science from the Conservatoire National des Arts et Metiers, Paris, France in 2003. Irini's research interests are related to Web Data Management and more specifically the development of benchmarks for RDF engines, instance matching and link discovery systems, the management of provenance for Linked Data, access control for RDF datasets, bias in online information providers and data integration. She has authored a large number of articles and journals and has served as chair of 3 international workshops. She can be contacted at <a href="mailto:fundul@ics.forth.gr">fundul@ics.forth.gr</a>.</p>
 									</div>
 								</div>
 							</section>
 						</div>
 					</div>
 				</section>
-				
-
-			<!-- Footer -->
-				<div id="footer">
-					<div class="container">
-						<header class="major">
-							<h2>Get in Touch!</h2>
-						</header>
-					</div>
-
-					<!-- Icons -->
-						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
-						</ul>
-
-					<!-- Copyright -->
-						<div class="copyright">
-							<ul class="menu">
-								<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
-
-				</div>
-
 		</div>
 
 		<!-- Scripts -->
