added Riccardo's bio

--- a/index.html
+++ b/index.html
@@ -122,6 +122,17 @@
 								</div>
 							</section>
 						</div>
+						<div class="row">
+							<section class="col-6 col-12-narrower">
+								<div class="box post">
+									<a href="https://riccardotommasini.com/" class="image left" target="_blank"><img src="images/Riccardo.png" alt="" /></a>
+									<div class="inner">
+										<h3><a href="https://riccardotommasini.com/" target="_blank">Riccardo Tommasini</a></h3>
+										<p style="text-align:justify">Riccardo Tommasini is a Ph.D. student at the Department of Electronics and Information of the Politecnico di Milano. He enrolled in November 2015, focusing on how to realize an efficient yet Expressive stream reasoning approach. His research interest comprises Reasoning and Ontology-Based Data Access, Stream Processing and Complex Event Processing, Temporal Logics and Benchmarking. Riccardo’s teaching activities comprise (i) a Big Data Tutorial with practical classes on Esper and C-SPARQL during his visiting at Kno.e.sis Center at Wright State University, Dayton, Ohio. (ii) He is a teaching assistant at Politecnico di Milano for the courses: Interoperability and Semantic Web Technologies (15-16) and Principles of Programming Languages (16-217, 17-18). He can be contacted at <a href="mailto:riccardo.tommasini@polimi.it">riccardo.tommasini@polimi.it</a>.</p>
+									</div>
+								</div>
+							</section>
+						</div>
 					</div>
 				</section>
 		</div>
